--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>CodeSense</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylessheet" hreh="styles.css"> 
 </head>
 <body>
     <header>
