--- a/user_management.html
+++ b/user_management.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Management - CodeSense</title>
+    <link rel="stylessheet" hreh="styles.css"> 
 </head>
 <body>
     <aside>
