--- a/admin_settings.html
+++ b/admin_settings.html
@@ -18,10 +18,10 @@
               <li><a href="#">Model Settings</a></li>
             </ul>
         </nav>
-        <footer>
+        <footer class="aside-footer" aria-label="Admin footer">
             <div>
                 <p>Admin User</p>
-                <p>admin@codesense.ai</p>
+                <p><a href="mailto:admin@codesense.ai">admin@codesense.ai</a></p>
             </div>
         </footer>
     </aside>
@@ -67,7 +67,7 @@
             </div>
         </section>
         <footer>
-            <buttton>Save Settings</buttton>
+            <button>Save Settings</button>
         </footer>
     </main>
 </body>
