--- a/user_management.html
+++ b/user_management.html
@@ -16,9 +16,9 @@
             <a href="#">Logs</a>
             <a href="#">Model Settings</a>
         </nav>
-        <footer>
+        <footer class="aside-footer" aria-label="Admin footer">
             <p>Admin User</p>
-            <p>admin@codesense.ai</p>
+            <p><a href="mailto:admin@codesense.ai">admin@codesense.ai</a></p>
         </footer>
     </aside>
     <main>
