--- a/admin_settings.html
+++ b/admin_settings.html
@@ -12,10 +12,10 @@
         <p>Admin Panel</p>
         <nav>
             <ul>
-              <li><a href="#">Dashboard</a></li>
-              <li><a href="#">User Management</a></li>
-              <li><a href="#">Logs</a></li>
-              <li><a href="#">Model Settings</a></li>
+              <li><a href="admin.html">Dashboard</a></li>
+              <li><a href="user_management.html">User Management</a></li>
+              <li><a href="logs.html">Logs</a></li>
+              <li><a href="admin_settings.html">Model Settings</a></li>
             </ul>
         </nav>
         <footer class="aside-footer" aria-label="Admin footer">
