linked to index.html

--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <aside>
-        <h1>Code Sense</h1>
+        <h1><a href="index.html">Code Sense</a></h1>
         <p>Admin Panel</p>
         <nav>
             <ul>
