--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <nav>
             <span>CodeSense</span>
             <div>
+                <a href="signin.html" class="btn-signin">Sign In</a>
                 <a href="#">Dashboard</a>
             </div>
         </nav>
