--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <span>CodeSense</span>
             <div>
-                <a href="#user.html">Dashboard</a>
+                <a href="user.html">Dashboard</a>
             </div>
         </nav>
     </header>
