styles of user history and settings

--- a/user.html
+++ b/user.html
@@ -475,7 +475,7 @@
                 <span>&lt;/&gt;</span>
             </div>
             <div class="brand-text">
-                <h1>CodeSense</h1>
+                <a href="index.html"><h1>CodeSense</h1></a>
                 <span>Readable code explanations</span>
             </div>
         </div>
@@ -505,10 +505,7 @@
                     <div class="panel-icon">{"}</div>
                     <h2>Code Input</h2>
                 </div>
-                <div class="chip">
-                    <span class="chip-dot"></span>
-                    <span>Language</span>
-                </div>
+                
             </div>
 
             <div class="field-group">
