--- a/user_history.html
+++ b/user_history.html
@@ -1,141 +1,382 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
-<meta charset="UTF-8">
-<title>History - CodeSense</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>History - CodeSense</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-:root{
---bg:#050816;--text:#e5e7eb;--muted:#9ca3af;
---panel-bg:#020617;--border:#1f2937;--input-bg:#020617;
---accent-start:#6366f1;--accent-end:#a855f7;--button-text:#f9fafb;
---chip-bg:rgba(148,163,184,0.12);--shadow-soft:0 18px 45px rgba(15,23,42,0.85);
-}
-html[data-theme="light"],body[data-theme="light"]{
---bg:#f3f4f6;--text:#020617;--muted:#6b7280;
---panel-bg:#ffffff;--border:#e5e7eb;--input-bg:#f9fafb;
---chip-bg:rgba(15,23,42,0.05);--shadow-soft:0 18px 45px rgba(15,23,42,0.12);
-}
-*{margin:0;padding:0;box-sizing:border-box;font-family:system-ui;}
-body{
-min-height:100vh;
-background:
-radial-gradient(circle at top left, rgba(129,140,248,0.24), transparent 55%),
-radial-gradient(circle at top right, rgba(236,72,153,0.18), transparent 55%),
-radial-gradient(circle at bottom, rgba(45,212,191,0.12), transparent 55%),
-var(--bg);
-color:var(--text);padding:20px;
-}
-.shell{max-width:1160px;margin:auto;}
+    <style>
+        :root{
+            --bg: #050816;
+            --text: #0f172a;
+            --muted: #6b7280;
+            --panel-bg: #ffffff;
+            --border: #e5e7eb;
+            --input-bg: #f9fafb;
+            --accent-start: #6366f1;
+            --accent-end: #a855f7;
+            --button-text: #ffffff;
+            --chip-bg: rgba(15,23,42,0.05);
+            --shadow-soft: 0 18px 45px rgba(15,23,42,0.12);
+        }
 
-.topbar{
-display:flex;justify-content:space-between;align-items:center;
-background:rgba(15,23,42,0.85);padding:14px 18px;border-radius:18px;
-backdrop-filter:blur(18px);border:1px solid rgba(148,163,184,0.25);
-box-shadow:var(--shadow-soft);
-}
-.brand{display:flex;align-items:center;gap:10px;}
-.brand-logo{
-width:32px;height:32px;border-radius:50%;
-background:conic-gradient(from 180deg,#6366f1,#a855f7,#22c55e);
-display:flex;align-items:center;justify-content:center;font-size:17px;color:#fff;
-}
-.brand-text span{font-size:11px;color:var(--muted);}
-.nav-tabs{
-display:flex;gap:8px;background:rgba(15,23,42,0.65);
-padding:4px;border-radius:999px;
-}
-.nav-tab{
-border:none;padding:6px 14px;border-radius:999px;
-font-size:13px;background:transparent;color:var(--muted);cursor:pointer;
-}
-.nav-tab.active{background:#0f172a;color:#e5e7eb;}
+        html[data-theme="dark"],
+        body[data-theme="dark"] {
+            --bg: #050816;
+            --text: #e5e7eb;
+            --muted: #9ca3af;
+            --panel-bg: #020617;
+            --border: #1f2937;
+            --input-bg: #020617;
+            --accent-start: #6366f1;
+            --accent-end: #a855f7;
+            --button-text: #f9fafb;
+            --chip-bg: rgba(148,163,184,0.12);
+            --shadow-soft: 0 18px 45px rgba(15,23,42,0.85);
+        }
 
-.icon-btn{
-width:32px;height:32px;border-radius:999px;
-border:1px solid rgba(148,163,184,0.35);
-background:rgba(15,23,42,0.6);
-color:var(--muted);cursor:pointer;
-display:flex;align-items:center;justify-content:center;
-}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        }
 
-/* Panel */
-.panel{
-margin-top:22px;background:var(--panel-bg);
-border-radius:22px;padding:20px;
-border:1px solid rgba(148,163,184,0.25);
-box-shadow:var(--shadow-soft);
-}
+        body {
+            min-height: 100vh;
+            background:
+                radial-gradient(circle at top left, rgba(129,140,248,0.24), transparent 55%),
+                radial-gradient(circle at top right, rgba(236,72,153,0.18), transparent 55%),
+                radial-gradient(circle at bottom, rgba(45,212,191,0.12), transparent 55%),
+                #fdfbff;
+            color: var(--text);
+            padding: 20px;
+        }
 
-/* Table */
-.history-table{width:100%;border-collapse:collapse;font-size:12px;}
-.history-table thead th{
-padding:8px;text-align:left;color:var(--muted);
-border-bottom:1px solid rgba(148,163,184,0.3);
-}
-.history-table td{
-padding:6px;color:var(--text);
-border-bottom:1px solid rgba(148,163,184,0.15);
-}
-.placeholder{text-align:center;color:var(--muted);padding:30px;font-size:13px;}
-</style>
+        .shell {
+            max-width: 1160px;
+            margin: 0 auto;
+        }
+
+        /* Top bar */
+        .topbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 16px;
+            padding: 14px 18px;
+            border-radius: 28px;
+            background: #ffffff;
+            box-shadow:
+                0 18px 45px rgba(15,23,42,0.10),
+                0 0 0 1px rgba(148,163,184,0.18);
+        }
+
+        .brand {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .brand-logo {
+            width: 34px;
+            height: 34px;
+            border-radius: 999px;
+            background: conic-gradient(from 180deg, #6366f1, #22c55e, #ec4899, #6366f1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 12px 22px rgba(129,140,248,0.65);
+        }
+
+        .brand-logo span {
+            font-size: 18px;
+            font-weight: 700;
+            color: #f9fafb;
+        }
+
+        .brand-text {
+            display: flex;
+            flex-direction: column;
+            gap: 2px;
+        }
+
+        .brand-text h1 {
+            font-size: 19px;
+            font-weight: 600;
+            letter-spacing: 0.01em;
+        }
+
+        .brand-text span {
+            font-size: 11px;
+            color: var(--muted);
+        }
+
+        .top-nav {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex: 1;
+        }
+
+        .nav-tabs {
+            display: flex;
+            align-items: center;
+            gap: 0;
+            padding: 4px;
+            border-radius: 999px;
+            background: linear-gradient(135deg, #f3f4ff, #fdf2ff);
+            box-shadow: inset 0 0 0 1px rgba(148,163,184,0.25),
+                        0 12px 30px rgba(148,163,184,0.35);
+        }
+
+        .nav-tab {
+            border: none;
+            padding: 8px 28px;
+            border-radius: 999px;
+            background: transparent;
+            color: #6b7280;
+            font-size: 14px;
+            cursor: pointer;
+            transition: all 0.15s ease;
+        }
+
+        .nav-tab.active {
+            background: #ffffff;
+            color: #111827;
+            box-shadow:
+                0 10px 24px rgba(148,163,184,0.6),
+                0 0 0 1px rgba(209,213,219,0.9);
+        }
+
+        .top-actions {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .icon-btn {
+            width: 34px;
+            height: 34px;
+            border-radius: 999px;
+            border: 1px solid rgba(148,163,184,0.50);
+            background: #ffffff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 17px;
+            color: #4b5563;
+            box-shadow: 0 10px 25px rgba(148,163,184,0.45);
+            transition: transform 0.1s ease, box-shadow 0.1s ease;
+        }
+
+        .icon-btn:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 14px 30px rgba(148,163,184,0.6);
+        }
+
+        .icon-btn:active {
+            transform: translateY(0) scale(0.96);
+            box-shadow: 0 6px 18px rgba(148,163,184,0.55);
+        }
+
+        /* Main content */
+        .workspace {
+            margin-top: 22px;
+        }
+
+        .panel {
+            background: var(--panel-bg);
+            border-radius: 26px;
+            padding: 20px 20px 18px;
+            border: 1px solid rgba(226,232,240,0.9);
+            box-shadow:
+                0 26px 60px rgba(15,23,42,0.12),
+                0 0 0 1px rgba(226,232,240,0.9);
+        }
+
+        .panel-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 14px;
+        }
+
+        .panel-title {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .panel-icon {
+            width: 26px;
+            height: 26px;
+            border-radius: 999px;
+            background: #fee2e2;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #b91c1c;
+            font-size: 15px;
+        }
+
+        .panel-title h2 {
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        /* History table */
+        .history-table {
+            width: 100%;
+            border-collapse: collapse;
+            font-size: 13px;
+        }
+
+        .history-table thead th {
+            text-align: left;
+            padding: 8px 6px;
+            font-weight: 500;
+            color: #6b7280;
+            border-bottom: 1px solid #e5e7eb;
+        }
+
+        .history-table tbody td {
+            padding: 8px 6px;
+            border-bottom: 1px solid #f1f5f9;
+            color: #4b5563;
+        }
+
+        .history-table tbody tr:last-child td {
+            border-bottom: none;
+        }
+
+        .chip-empty {
+            text-align: center;
+            padding: 22px 6px;
+            font-size: 13px;
+            color: var(--muted);
+        }
+
+        @media (max-width: 720px) {
+            .topbar {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+            }
+
+            .top-nav {
+                order: 3;
+                width: 100%;
+                justify-content: flex-start;
+            }
+
+            .top-actions {
+                align-self: flex-end;
+            }
+
+            .nav-tabs {
+                box-shadow: inset 0 0 0 1px rgba(148,163,184,0.25);
+            }
+        }
+    </style>
 </head>
+<body data-theme="light">
 
-<body>
-<div class="shell">
+    <div class="shell">
 
-<header class="topbar">
-    <div class="brand">
-        <div class="brand-logo">&lt;/&gt;</div>
-        <div class="brand-text">
-            <h1 style="font-size:18px;">CodeSense</h1>
-            <span>Readable code explanations</span>
-        </div>
+        <!-- Top bar -->
+        <header class="topbar">
+            <div class="brand">
+                <div class="brand-logo">
+                    <span>&lt;/&gt;</span>
+                </div>
+                <div class="brand-text">
+                    <h1>CodeSense</h1>
+                    <span>Readable code explanations</span>
+                </div>
+            </div>
+
+            <div class="top-nav">
+                <div class="nav-tabs">
+                    <button class="nav-tab" type="button" onclick="location.href='user.html'">Generate</button>
+                    <button class="nav-tab active" type="button" onclick="location.href='user_history.html'">History</button>
+                    <button class="nav-tab" type="button" onclick="location.href='user_settings.html'">Settings</button>
+                </div>
+            </div>
+
+            <div class="top-actions">
+                <button id="theme-toggle" class="icon-btn" title="Toggle theme">☀️</button>
+                <button class="icon-btn" title="Profile">🧑‍💻</button>
+                <button class="icon-btn" title="Refresh">⟲</button>
+            </div>
+        </header>
+
+        <!-- History content -->
+        <main class="workspace">
+            <section class="panel">
+                <div class="panel-header">
+                    <div class="panel-title">
+                        <div class="panel-icon">📜</div>
+                        <h2>History</h2>
+                    </div>
+                </div>
+
+                <table class="history-table">
+                    <thead>
+                        <tr>
+                            <th>Snippet</th>
+                            <th>Language</th>
+                            <th>Detail level</th>
+                            <th>Time</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="chip-empty" colspan="4">
+                                No history yet – generate your first explanation from the Generate tab.
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </main>
     </div>
 
-    <div class="nav-tabs">
-        <button onclick="location.href='user.html'" class="nav-tab">Generate</button>
-        <button onclick="location.href='user_history.html'" class="nav-tab active">History</button>
-        <button onclick="location.href='user_settings.html'" class="nav-tab">Settings</button>
-    </div>
+    <script>
+        (function () {
+            const html = document.documentElement;
+            const body = document.body;
+            const toggle = document.getElementById('theme-toggle');
 
-    <button id="theme-toggle" class="icon-btn">🌙</button>
-</header>
+            function applyTheme(theme) {
+                const mode = theme === 'dark' ? 'dark' : 'light';
+                html.setAttribute('data-theme', mode);
+                body.setAttribute('data-theme', mode);
+                localStorage.setItem('theme', mode);
+                toggle.textContent = mode === 'dark' ? '🌙' : '☀️';
+            }
 
-<section class="panel">
+            // Default to light the first time
+            const saved = localStorage.getItem('theme');
+            if (saved) {
+                applyTheme(saved);
+            } else {
+                applyTheme('light');
+            }
 
-<h2 style="margin-bottom:10px;">Your History 📜</h2>
+            toggle.addEventListener('click', function () {
+                const current = html.getAttribute('data-theme') === 'dark' ? 'dark' : 'light';
+                const next = current === 'dark' ? 'light' : 'dark';
+                applyTheme(next);
+            });
 
-<table class="history-table">
-<thead>
-<tr><th>Snippet</th><th>Language</th><th>Detail</th><th>Time</th></tr>
-</thead>
-
-<tbody id="hist-body">
-<tr><td colspan="4" class="placeholder">No history yet</td></tr>
-</tbody>
-</table>
-
-</section>
-</div>
-
-<script>
-(function(){
-const html=document.documentElement;
-const saved=localStorage.getItem('theme');
-if(saved==='light'){
-html.setAttribute('data-theme','light');
-document.getElementById('theme-toggle').textContent='☀️';
-}
-document.getElementById('theme-toggle').addEventListener('click',()=>{
-const light=html.getAttribute('data-theme')==='light';
-html.toggleAttribute('data-theme');
-localStorage.setItem('theme',light?'dark':'light');
-document.getElementById('theme-toggle').textContent=light?'🌙':'☀️';
-});
-})();
-</script>
-
+            window.addEventListener('storage', function (e) {
+                if (e.key === 'theme' && e.newValue) {
+                    applyTheme(e.newValue);
+                }
+            });
+        })();
+    </script>
 </body>
 </html>
