--- a/user_settings.html
+++ b/user_settings.html
@@ -1,124 +1,422 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
-<meta charset="UTF-8">
-<title>Settings - CodeSense</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>Settings - CodeSense</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-/* Same Global Styles as History */
-:root{
---bg:#050816;--text:#e5e7eb;--muted:#9ca3af;
---panel-bg:#020617;--border:#1f2937;--input-bg:#020617;
---accent-start:#6366f1;--accent-end:#a855f7;--button-text:#f9fafb;
---chip-bg:rgba(148,163,184,0.12);--shadow-soft:0 18px 45px rgba(15,23,42,0.85);
-}
-html[data-theme="light"]{--bg:#f3f4f6;--text:#020617;--muted:#6b7280;--panel-bg:#fff;}
-body{
-min-height:100vh;
-background:
-radial-gradient(circle at top left,rgba(129,140,248,0.24),transparent 55%),
-var(--bg);
-color:var(--text);padding:20px;
-}
-*{margin:0;padding:0;box-sizing:border-box;font-family:system-ui;}
-.shell{max-width:1160px;margin:auto;}
-.topbar{display:flex;justify-content:space-between;align-items:center;
-background:rgba(15,23,42,0.85);padding:14px 18px;border-radius:18px;
-border:1px solid rgba(148,163,184,0.25);box-shadow:var(--shadow-soft);}
-.nav-tabs{display:flex;gap:8px;padding:4px;background:rgba(15,23,42,0.65);border-radius:999px;}
-.nav-tab{padding:6px 14px;border-radius:999px;background:transparent;color:var(--muted);cursor:pointer;border:none;}
-.nav-tab.active{background:#0f172a;color:#e5e7eb;}
-.icon-btn{
-width:32px;height:32px;border-radius:999px;border:1px solid rgba(148,163,184,0.35);
-background:rgba(15,23,42,0.6);color:var(--muted);cursor:pointer;
-display:flex;align-items:center;justify-content:center;
-}
-.panel{
-margin-top:22px;background:var(--panel-bg);
-padding:20px;border-radius:22px;border:1px solid rgba(148,163,184,0.25);
-box-shadow:var(--shadow-soft);
-}
-label{font-size:13px;color:var(--muted);margin-top:12px;display:block;}
-input,select{
-width:100%;padding:8px;border:1px solid var(--border);
-background:var(--input-bg);color:var(--text);
-border-radius:12px;font-size:13px;
-}
-button{
-margin-top:18px;width:100%;padding:12px;
-border-radius:999px;border:none;font-size:14px;
-background:linear-gradient(135deg,var(--accent-start),var(--accent-end));
-color:var(--button-text);cursor:pointer;
-}
-</style>
+    <style>
+        :root{
+            --bg: #050816;
+            --text: #0f172a;
+            --muted: #6b7280;
+            --panel-bg: #ffffff;
+            --border: #e5e7eb;
+            --input-bg: #f9fafb;
+            --accent-start: #6366f1;
+            --accent-end: #a855f7;
+            --button-text: #ffffff;
+            --chip-bg: rgba(15,23,42,0.05);
+            --shadow-soft: 0 18px 45px rgba(15,23,42,0.12);
+        }
+
+        html[data-theme="dark"],
+        body[data-theme="dark"] {
+            --bg: #050816;
+            --text: #e5e7eb;
+            --muted: #9ca3af;
+            --panel-bg: #020617;
+            --border: #1f2937;
+            --input-bg: #020617;
+            --accent-start: #6366f1;
+            --accent-end: #a855f7;
+            --button-text: #f9fafb;
+            --chip-bg: rgba(148,163,184,0.12);
+            --shadow-soft: 0 18px 45px rgba(15,23,42,0.85);
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+        }
+
+        body {
+            min-height: 100vh;
+            background:
+                radial-gradient(circle at top left, rgba(129,140,248,0.24), transparent 55%),
+                radial-gradient(circle at top right, rgba(236,72,153,0.18), transparent 55%),
+                radial-gradient(circle at bottom, rgba(45,212,191,0.12), transparent 55%),
+                #fdfbff;
+            color: var(--text);
+            padding: 20px;
+        }
+
+        .shell {
+            max-width: 1160px;
+            margin: 0 auto;
+        }
+
+        /* Top bar (same as user.html) */
+        .topbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 16px;
+            padding: 14px 18px;
+            border-radius: 28px;
+            background: #ffffff;
+            box-shadow:
+                0 18px 45px rgba(15,23,42,0.10),
+                0 0 0 1px rgba(148,163,184,0.18);
+        }
+
+        .brand {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .brand-logo {
+            width: 34px;
+            height: 34px;
+            border-radius: 999px;
+            background: conic-gradient(from 180deg, #6366f1, #22c55e, #ec4899, #6366f1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 12px 22px rgba(129,140,248,0.65);
+        }
+
+        .brand-logo span {
+            font-size: 18px;
+            font-weight: 700;
+            color: #f9fafb;
+        }
+
+        .brand-text {
+            display: flex;
+            flex-direction: column;
+            gap: 2px;
+        }
+
+        .brand-text h1 {
+            font-size: 19px;
+            font-weight: 600;
+            letter-spacing: 0.01em;
+        }
+
+        .brand-text span {
+            font-size: 11px;
+            color: var(--muted);
+        }
+
+        .top-nav {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex: 1;
+        }
+
+        .nav-tabs {
+            display: flex;
+            align-items: center;
+            gap: 0;
+            padding: 4px;
+            border-radius: 999px;
+            background: linear-gradient(135deg, #f3f4ff, #fdf2ff);
+            box-shadow: inset 0 0 0 1px rgba(148,163,184,0.25),
+                        0 12px 30px rgba(148,163,184,0.35);
+        }
+
+        .nav-tab {
+            border: none;
+            padding: 8px 28px;
+            border-radius: 999px;
+            background: transparent;
+            color: #6b7280;
+            font-size: 14px;
+            cursor: pointer;
+            transition: all 0.15s ease;
+        }
+
+        .nav-tab.active {
+            background: #ffffff;
+            color: #111827;
+            box-shadow:
+                0 10px 24px rgba(148,163,184,0.6),
+                0 0 0 1px rgba(209,213,219,0.9);
+        }
+
+        .top-actions {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .icon-btn {
+            width: 34px;
+            height: 34px;
+            border-radius: 999px;
+            border: 1px solid rgba(148,163,184,0.50);
+            background: #ffffff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 17px;
+            color: #4b5563;
+            box-shadow: 0 10px 25px rgba(148,163,184,0.45);
+            transition: transform 0.1s ease, box-shadow 0.1s ease;
+        }
+
+        .icon-btn:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 14px 30px rgba(148,163,184,0.6);
+        }
+
+        .icon-btn:active {
+            transform: translateY(0) scale(0.96);
+            box-shadow: 0 6px 18px rgba(148,163,184,0.55);
+        }
+
+        /* Settings panel */
+        .workspace {
+            margin-top: 22px;
+        }
+
+        .panel {
+            background: var(--panel-bg);
+            border-radius: 26px;
+            padding: 20px 22px 22px;
+            border: 1px solid rgba(226,232,240,0.9);
+            box-shadow:
+                0 26px 60px rgba(15,23,42,0.12),
+                0 0 0 1px rgba(226,232,240,0.9);
+        }
+
+        .panel-header {
+            margin-bottom: 14px;
+        }
+
+        .panel-header h2 {
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        .settings-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 14px 22px;
+            margin-top: 8px;
+        }
+
+        label {
+            display: block;
+            font-size: 13px;
+            font-weight: 500;
+            color: var(--muted);
+            margin-bottom: 4px;
+        }
+
+        input,
+        select {
+            width: 100%;
+            border-radius: 12px;
+            border: 1px solid rgba(209,213,219,0.95);
+            background: var(--input-bg);
+            color: var(--text);
+            font-size: 13px;
+            padding: 8px 10px;
+            outline: none;
+        }
+
+        input:focus,
+        select:focus {
+            border-color: #818cf8;
+            box-shadow: 0 0 0 1px rgba(129,140,248,0.75);
+        }
+
+        .save-row {
+            margin-top: 20px;
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        .btn-primary {
+            border: none;
+            padding: 10px 22px;
+            border-radius: 999px;
+            font-size: 14px;
+            font-weight: 500;
+            cursor: pointer;
+            background: linear-gradient(135deg, var(--accent-start), var(--accent-end));
+            color: var(--button-text);
+            box-shadow: 0 16px 40px rgba(129,140,248,0.85);
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 20px 50px rgba(129,140,248,1);
+        }
+
+        .btn-primary:active {
+            transform: translateY(0) scale(0.97);
+            box-shadow: 0 12px 30px rgba(129,140,248,0.9);
+        }
+
+        @media (max-width: 720px) {
+            .topbar {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+            }
+
+            .top-nav {
+                order: 3;
+                width: 100%;
+                justify-content: flex-start;
+            }
+
+            .top-actions {
+                align-self: flex-end;
+            }
+        }
+    </style>
 </head>
+<body data-theme="light">
 
-<body>
-<div class="shell">
+    <div class="shell">
 
-<header class="topbar">
-    <div class="brand" style="display:flex;align-items:center;gap:10px;">
-        <div class="brand-logo">&lt;/&gt;</div>
-        <div class="brand-text">
-            <h1 style="font-size:18px;">CodeSense</h1>
-            <span style="font-size:11px;color:var(--muted);">Readable code explanations</span>
-        </div>
+        <!-- Top bar -->
+        <header class="topbar">
+            <div class="brand">
+                <div class="brand-logo">
+                    <span>&lt;/&gt;</span>
+                </div>
+                <div class="brand-text">
+                    <h1>CodeSense</h1>
+                    <span>Readable code explanations</span>
+                </div>
+            </div>
+
+            <div class="top-nav">
+                <div class="nav-tabs">
+                    <button class="nav-tab" type="button" onclick="location.href='user.html'">Generate</button>
+                    <button class="nav-tab" type="button" onclick="location.href='user_history.html'">History</button>
+                    <button class="nav-tab active" type="button" onclick="location.href='user_settings.html'">Settings</button>
+                </div>
+            </div>
+
+            <div class="top-actions">
+                <button id="theme-toggle" class="icon-btn" title="Toggle theme">☀️</button>
+                <button class="icon-btn" title="Profile">🧑‍💻</button>
+                <button class="icon-btn" title="Refresh">⟲</button>
+            </div>
+        </header>
+
+        <!-- Settings content -->
+        <main class="workspace">
+            <section class="panel">
+                <div class="panel-header">
+                    <h2>User Settings</h2>
+                </div>
+
+                <div class="settings-grid">
+                    <div>
+                        <label for="display-name">Display name</label>
+                        <input id="display-name" type="text" placeholder="Your name">
+                    </div>
+
+                    <div>
+                        <label for="email">Email</label>
+                        <input id="email" type="email" placeholder="you@example.com">
+                    </div>
+
+                    <div>
+                        <label for="language">Preferred language</label>
+                        <select id="language">
+                            <option>Auto</option>
+                            <option>Python</option>
+                            <option>JavaScript</option>
+                            <option>Java</option>
+                            <option>C++</option>
+                            <option>C</option>
+                        </select>
+                    </div>
+
+                    <div>
+                        <label for="detail">Default explanation style</label>
+                        <select id="detail">
+                            <option>Short &amp; simple</option>
+                            <option>Balanced</option>
+                            <option>Step-by-step</option>
+                        </select>
+                    </div>
+
+                    <div>
+                        <label for="theme-select">Theme</label>
+                        <select id="theme-select">
+                            <option>Light</option>
+                            <option>Dark</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="save-row">
+                    <button class="btn-primary" type="button">
+                        <span>💾</span>
+                        <span>Save settings</span>
+                    </button>
+                </div>
+            </section>
+        </main>
     </div>
 
-    <div class="nav-tabs">
-        <button onclick="location.href='user.html'" class="nav-tab">Generate</button>
-        <button onclick="location.href='user_history.html'" class="nav-tab">History</button>
-        <button onclick="location.href='user_settings.html'" class="nav-tab active">Settings</button>
-    </div>
+    <script>
+        (function () {
+            const html = document.documentElement;
+            const body = document.body;
+            const toggle = document.getElementById('theme-toggle');
+            const themeSelect = document.getElementById('theme-select');
 
-    <button id="theme-toggle" class="icon-btn">🌙</button>
-</header>
+            function applyTheme(theme) {
+                const mode = theme === 'dark' ? 'dark' : 'light';
+                html.setAttribute('data-theme', mode);
+                body.setAttribute('data-theme', mode);
+                localStorage.setItem('theme', mode);
+                toggle.textContent = mode === 'dark' ? '🌙' : '☀️';
+                themeSelect.value = mode === 'dark' ? 'Dark' : 'Light';
+            }
 
-<section class="panel">
+            const saved = localStorage.getItem('theme');
+            if (saved) {
+                applyTheme(saved);
+            } else {
+                applyTheme('light');
+            }
 
-<h2 style="margin-bottom:10px;">Settings ⚙️</h2>
+            toggle.addEventListener('click', function () {
+                const current = html.getAttribute('data-theme') === 'dark' ? 'dark' : 'light';
+                const next = current === 'dark' ? 'light' : 'dark';
+                applyTheme(next);
+            });
 
-<label>Display Name</label>
-<input type="text" placeholder="Your name">
+            themeSelect.addEventListener('change', function () {
+                const next = themeSelect.value === 'Dark' ? 'dark' : 'light';
+                applyTheme(next);
+            });
 
-<label>Email</label>
-<input type="email" placeholder="you@example.com">
-
-<label>Preferred Language</label>
-<select>
-<option>Auto</option><option>Python</option><option>JavaScript</option>
-<option>Java</option><option>C++</option><option>C</option>
-</select>
-
-<label for="theme-select">Theme</label>
-<select id="theme-select">
-<option>Dark</option><option>Light</option>
-</select>
-
-<button>Save Settings</button>
-
-</section>
-</div>
-
-<script>
-(function(){
-const html=document.documentElement;
-const select=document.getElementById('theme-select');
-const saved=localStorage.getItem('theme');
-if(saved){html.setAttribute('data-theme',saved);select.value=saved==='light'?'Light':'Dark';}
-select.addEventListener('change',()=>{
-let val=select.value==='Light'?'light':'dark';
-localStorage.setItem('theme',val);
-html.setAttribute('data-theme',val);
-});
-document.getElementById('theme-toggle').addEventListener('click',()=>{
-const isLight=html.getAttribute('data-theme')==='light';
-html.setAttribute('data-theme',isLight?'dark':'light');
-localStorage.setItem('theme',isLight?'dark':'light');
-});
-})();
-</script>
-
+            window.addEventListener('storage', function (e) {
+                if (e.key === 'theme' && e.newValue) {
+                    applyTheme(e.newValue);
+                }
+            });
+        })();
+    </script>
 </body>
 </html>
