--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <span>CodeSense</span>
             <div>
-                <a href="user.html">Dashboard</a>
+                <a href="#" id="dashboard-link">Dashboard</a>
             </div>
         </nav>
     </header>
@@ -19,8 +19,8 @@
         <section>
             <h1>Paste Code → Get an Easy Explanation</h1>
             <p>Transform complex code into simple, human-friendly explanations. Support for all programming languages with AI-powered analysis.</p>
-            <button>Try Now</button>
-            <button>Go to Dashboard</button>
+            <button id="try-now">Try Now</button>
+            <button id="go-dashboard">Go to Dashboard</button>
         </section>
         <section>
             <div>
@@ -122,4 +122,5 @@ function fibonacci(n) {
         </div>
     </footer>
 </body>
+<script src="app.js"></script>
 </html>
