--- a/user_history.html
+++ b/user_history.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>History - CodeSense</title>
@@ -281,7 +281,7 @@
         }
     </style>
 </head>
-<body data-theme="light">
+<body>
 
     <div class="shell">
 
@@ -343,40 +343,6 @@
         </main>
     </div>
 
-    <script>
-        (function () {
-            const html = document.documentElement;
-            const body = document.body;
-            const toggle = document.getElementById('theme-toggle');
-
-            function applyTheme(theme) {
-                const mode = theme === 'dark' ? 'dark' : 'light';
-                html.setAttribute('data-theme', mode);
-                body.setAttribute('data-theme', mode);
-                localStorage.setItem('theme', mode);
-                toggle.textContent = mode === 'dark' ? '🌙' : '☀️';
-            }
-
-            // Default to light the first time
-            const saved = localStorage.getItem('theme');
-            if (saved) {
-                applyTheme(saved);
-            } else {
-                applyTheme('light');
-            }
-
-            toggle.addEventListener('click', function () {
-                const current = html.getAttribute('data-theme') === 'dark' ? 'dark' : 'light';
-                const next = current === 'dark' ? 'light' : 'dark';
-                applyTheme(next);
-            });
-
-            window.addEventListener('storage', function (e) {
-                if (e.key === 'theme' && e.newValue) {
-                    applyTheme(e.newValue);
-                }
-            });
-        })();
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
