--- a/FrontEnd/admin.html
+++ b/FrontEnd/admin.html
@@ -75,13 +75,14 @@
             <div>
                 <p>Recent Operations</p>
             <table>
+                <tbody id="user-history">
                  <tr>
                     <th>USER</th>
                     <th>ACTION</th>
                     <th>LANGUAGE</th>
                     <th>TIME</th>
                 </tr>   
-                
+                </tbody>
             </table>
             </div>
            </main>
